# JanusClient

./: Cargo.toml  README.md  USAGE.md
cdp/: browser_protocol.md  target_protocol.md
crates/actor/: Cargo.toml
crates/actor/examples/: greeter.rs
crates/actor/src/: actor.rs  address.rs  common.rs  context.rs  error.rs  execution.rs  lib.rs  message.rs  supervision.rs  system.rs
docs/cdp/: README.md  browser_protocol.md  css_protocol.md  dom_protocol.md  page_protocol.md  target_protocol.md
docs/design/: ACTOR_DESIGN.md  ARCHITECTURE.md  JanusClient.md  LAYERS.md
docs/knowledges/: actor_model_rdp.md  client_api.md  debugging_flow.md  domain_reference.md  firefox_devtools_protocol.md  implementation_guide.md  implementation_patterns.md  message_format_fdp.md
examples/: css_example.rs  simple_client.rs
janus-client/: Cargo.toml
janus-client/crates/janus-core/src/: lib.rs
janus-client/crates/janus-core/src/actor/: mod.rs
janus-client/crates/janus-interface/src/: lib.rs
janus-client/crates/janus-transport/src/: connection.rs  lib.rs
janus-client/crates/janus-transport/src/websocket/: mod.rs
knowledges/: AI_PROMPT_GUIDE.md  css_domain_usage.md
src/: error.rs  lib.rs  message.rs
src/actor/: mod.rs
src/adapters/: chrome.rs  mod.rs
src/connection/: mod.rs
src/core/: mod.rs
src/domain/: browser.rs  css.rs  mod.rs
src/implementations/: mod.rs
src/implementations/chrome/: dom.rs  mod.rs  network.rs  page.rs
src/utils/: mod.rs
