[package]
name = "JanusClient"
version = "0.1.0"
edition = "2024"
description = "Firefox DevTools Protocol client implementation in Rust"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
futures = "0.3"
futures-util = "0.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
async-trait = "0.1"
log = "0.4.21"
env_logger = "0.11.3"
thiserror = "1.0.58"
url = "2.5"
base64 = "0.21.7"

[dev-dependencies]
tokio-test = "0.4"
pretty_env_logger = "0.5"

[[example]]
name = "simple_client"
path = "examples/simple_client.rs"

[[example]]
name = "css_example"
path = "examples/css_example.rs"
