[package]
name = "janus_client"
version = "0.1.0"
edition = "2021"
description = "A unified browser debugging protocol client in Rust"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
futures = "0.3"
futures-util = "0.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
async-trait = "0.1"
log = "0.4.21"
env_logger = "0.11.3"
thiserror = "1.0.58"
url = "2.5"
base64 = "0.21.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
pretty_env_logger = "0.5"
anyhow = "1.0"

[[example]]
name = "chrome_example"
path = "examples/chrome_example.rs"

[[example]]
name = "firefox_example"
path = "examples/firefox_example.rs"
