[workspace]
members = [
    "crates/janus-core",
    "crates/janus-interface",
    "crates/janus-transport",
    # Add future crates like janus-chrome-cdp here
]
resolver = "2"

[workspace.dependencies]
# Async Runtime & Utilities
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
async-trait = "0.1"

# Actor Framework
actix = "0.13"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = { version = "0.14", features = ["toml", "yaml", "env"] }
toml = "0.8" # Match config's dependency if needed

# Error Handling
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11" # Or another logger implementation

# Networking / WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] } # Or rustls-tls
url = "2.5"

# Add other common dependencies if needed
# e.g., uuid = { version = "1", features = ["v4"] } for unique IDs
